<resources>
    <!-- general -->
    <string name="NOTAKeyboard">NOTA Keyboard</string>
    <string name="NOTA">NOTA</string>
    <string name="original">Default</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="confirm">OK</string>
    <string name="cancel">No</string>
    <string name="complete">Done</string>
    <string name="notice">Notice</string>
    
    <string name="catch_phrase">Just type as usual, with less typos!</string>
    <string name="nota_app_link">[Link for NOTA Keyboard]\nhttps://play.google.com/store/apps/details?id=com.notakeyboard</string>
    
    <string name="nota_version_text">beta ver 1.4</string>
    <string name="nota_copyright_text">Copyright ⓒ 2016 NOTA, Inc.</string>
    <string name="nota_homepage">http://nota.ai</string>
    <string name="nota_privacy">Privacy Policy</string>
    
    <!-- keyboard_type -->
    <string name="landscape_english_keyboard">English Keyboard Landscape</string>
    <string name="landscape_korean_keyboard_shift">Korean Keyboard Landscape(shift)</string>
    <string name="landscape_korean_keyboard">Korean Keyboard Landscape</string>
    <string name="portrait_english_keyboard">English Keyboard Portrait</string>
    <string name="portrait_korean_keyboard_shift">Korean Keyboard Portrait(shift)</string>
    <string name="portrait_korean_keyboard">Korean Keyboard Portrait</string>
    
    
    <!-- key label -->
    <string name="shift">Shift</string>
    <string name="backspace">Backspace</string>
    <string name="symbol">Sym.</string>
    <string name="toggle_lang">한/영</string>
    <string name="NOTA_key">NOTA</string>
    <string name="space">Space</string>
    <string name="enter">Enter</string>
    <string name="enter_go">Go</string>
    <string name="enter_next">Next</string>
    <string name="enter_search">Find</string>
    <string name="enter_send">Send</string>
    
    
    <!-- initial setting -->
    <string name="english">English</string>
    <string name="korean">Korean</string>
    
    
    <!-- initial setting -->
    <string name="select_theme_instruction">Choose keyboard theme</string>
    <string name="select_layout_instruction">Select layout of keyboard\n(Dubeolsik, Cheonjiin, Danmoeum)</string>
    <string name="set_keyheight_numpad_instruction">Keyboard appearance setting</string>
    <string name="try_instruction">Let NOTA Keyboard reduce your typo itself\n\n No additional operations are needed</string>
    <string name="onbackpressed_exit_confirm">Tap \'Back\' button once more to exit</string>
    <string name="try_keyboard_hint">Type text</string>
    
    
    <!-- preference -->
    <string name="setting_ime">Add NOTA</string>
    <string name="alert_title_setting_ime">Add NOTA Keyboard</string>
	<string name="alert_text_setting_ime">After check NOTA Keyboard,\n tap the back button</string>
	<string name="select_default_ime">Select NOTA</string>
    
    <string name="call_setting">NOTA Keyboard setting</string>
    <string name="call_statistics">Check your statistics</string>
	
    <string name="preference">Preference</string>
    <string name="statistics">Statistics</string>
    <string name="outfit_preference">Appearance setting</string>
    <string name="select_theme">Theme</string>
    <string name="select_layout">Layout setting</string>
    <string name="doodeolsik">Dubeolsik</string>
    <string name="danmoeum">Danmoeum</string>
    <string name="cheonjiin">Cheonjiin</string>
    <string name="detail_outfit">Keyboard appearance setting</string>
    <string name="number_pad">Number pad</string>
    <string name="bold_text">Bold</string>
    <string name="key_height_pref">Key height</string>
    <string name="ml_preference">NOTA function setting</string>
    <string name="auto_train">Daily input pattern analysis</string>
    <string name="train_time">Set time for daily input pattern analyis</string>
    <string name="train">Start input pattern analysis</string>
    <string name="map_reset">Reset input pattern and setting</string>
    <string name="general_preference">General preference</string>
    <string name="select_lang">Select Language</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibration</string>
    <string name="double_touch_shift">Type ssangjaeum and diphthong by double tap</string>
    <string name="laboratory">NOTA Labs</string>
    <string name="yellow_key">Show effects when typo is corrected</string>
    <string name="performance_test">Performance test</string>
    <string name="performance_test_result">Performance test result</string>
    <string name="info">NOTA Keyboard</string>
    <string name="help">Help</string>
    <string name="about_us">About NOTA</string>
    
    <string name="setting_ime_instruction">Add NOTA Keyboard to the keyboard list</string>
    <string name="select_default_ime_instruction">Select NOTA Keyboard as default keyboard</string>
    <string name="statistics_explanation">Statistics of input pattern</string>
    <string name="select_theme_explanation">Choose keyboard theme</string>
    <string name="select_layout_explanation">Select layout of keyboard</string>
    <string name="detail_outfit_explanation">Adjust keyboard height, show number pad</string>
    <string name="auto_train_explanation">Use daily input pattern analysis</string>
    <string name="training_time_explanation">Set time for input pattern analysis</string>
    <string name="training_explanation">It takes 1~3 mins depending on the device</string>
    <string name="map_reset_explanation">Remove all user\'s data</string>
    <string name="select_lang_explanation">Select language that you use for typing</string>
    <string name="sound_on_off_explanation">Use sound when you type</string>
    <string name="vibration_on_off_explanation">Use vibration when you type</string>
    <string name="yellow_key_explanation">Vibration and color will show up differently</string>
    <string name="help_explanation"> Explanation of NOTA Keyboard</string>
    <string name="about_us_explanation">Version information / Send feedback</string>
    <string name="cannot_enter_due_to_train_alert">Cannot open the statistics during analysis</string>
    <string name="keyboard_outfit_warning">If you change appearance,\nall data will be removed\nContinue?</string>
    <string name="keyboard_layout_warning">If you change language,\nall data will be removed\nContinue?</string>
    <string name="data_reset_warning">All data will be removed\ncontinue?</string>
    <string name="select_language_warning">If you change language,\nall data will be removed\nContinue?</string>
    <string name="select_language_english_warning">English Keyboard must be selected</string>
    <string name="train_time_alert">Failed to set analysis time</string>
    <string name="train_now_notice">Analysis started</string>
	<string name="train_touchload_notice">Loading touch points…</string>
	<string name="train_saveresult_notice">Saving analysis result…</string>
    <string name="train_now_touch_point_is_not_enough_notice">Analysis failed. Not enough touch points</string>
    <string name="already_train_now_alert">Analysis is already running</string>
    <string name="double_touch_shift_on_off_explanation">e.g. ㄱ -> ㄲ, ㅏ -> ㅑ</string>
    <string name="map_reset_successfully">Input pattern is initialized</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_mail_title">feedback for NOTA Keyboard</string>
    <string name="touchseq_data_upload_title">Touchseq Data Upload</string>
    <string name="touchseq_data_upload_summary">Upload touch points to server for experiments</string>
    <string name="performance_test_summary">
        Conduct a test measuring the performance of error-corrective abilities.</string>
    <string name="performance_test_result_summary">
        Calculate and show results for performance testing.</string>

    <!-- ML -->
    <string name="training_successful">Analysis finished successfully</string>
    <string name="building_map">Drawing Keyboard Map : %s</string>
    <string name="keyboard_map_view">Keyboard Map Viz</string>
    <string name="keyboard_map_view_summary">Visualize keyboard map with sample sentence.</string>
    
    
    <!-- statistics -->
    <string name="mymap">My input pattern</string>
    <string name="mymap_share_alert">Share your input pattern with your friends</string>
    <string name="most_frequent_typo">Most frequent typo</string>
    <string name="no_typo_alert">Need more touch points</string>
    
</resources>
