<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_blue"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:paddingBottom="150dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nota_version_text"
            android:textSize="16sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/feedbackButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/feedback_button"
            android:text="@string/send_feedback"
            android:textSize="17sp"
            android:textColor="@color/default_blue"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nota_copyright_text"
            android:textSize="16sp"
            android:textColor="@color/preference_dim_skyblue"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/homepageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/nota_homepage"
                android:textSize="16sp"
                android:textColor="@color/preference_dim_skyblue"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"/>

            <Button
                android:id="@+id/privacyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/nota_privacy"
                android:textSize="16sp"
                android:textColor="@color/preference_dim_skyblue"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
