<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_blue" 
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="30dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:gravity="center" >
        <LinearLayout 
            android:id="@+id/naviArea"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_centerVertical="true"
    	android:paddingBottom="150dp">
    	
        <ImageView
		    android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:paddingBottom="10dp" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/catch_phrase"
            android:textSize="16sp"
            android:textColor="@android:color/white" />
    	
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_alignParentBottom="true"
    	android:paddingBottom="20dp">
    	
        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/setting_ime_instruction"
            android:textSize="14sp"
            android:textColor="@android:color/white" />
        
        <Button
            android:id="@+id/settingIMEButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/initializebutton1"
            android:text="@string/setting_ime"
            android:textSize="17sp"
            android:textColor="@color/default_blue"
            android:layout_marginTop="10dp" />
        
        <Button
            android:id="@+id/selectDefaultIMEButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/initializebutton2"
            android:text="@string/select_default_ime"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:enabled="false" />
    	
    </LinearLayout>

</RelativeLayout>
