<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootArea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:padding="15dp"
	        android:gravity="center" >
	        
            <Button
	            android:id="@+id/backBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="30dp"
	            android:layout_gravity="center"
	            android:background="@drawable/previous"
	            android:text="@string/back"
	            android:textColor="@color/preference_gray"
	            android:visibility="invisible" />
            
            <LinearLayout 
	            android:id="@+id/naviArea"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:orientation="horizontal" />
            
            <Button
	            android:id="@+id/nextBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="30dp"
	            android:layout_gravity="center"
	            android:background="@drawable/next"
	            android:text="@string/next"
	            android:textColor="@color/preference_gray" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="10dp"
	        android:textColor="@color/preference_black"
	        android:text="@string/select_theme_instruction"
	        android:textSize="15sp"
	        android:visibility="gone" />
        
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" />
    </LinearLayout>
    
    <ImageView
        android:id="@+id/keyboardImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>