<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:padding="30dp" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp" >
        	<TextView
        	    android:layout_width="150dp"
        	    android:layout_height="wrap_content"
        	    android:textSize="14sp"
	            android:textColor="@color/preference_black"
	            android:text="@string/key_height_pref"
	            android:gravity="center" />
        	
        	<SeekBar
        	    android:id="@+id/KeyHeightSeekbar"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:progressDrawable="@drawable/numpad_seekbar"
        	    android:thumb="@drawable/progress_indicator"
        	    android:splitTrack="false"
        	    android:max="4"
        	    android:progress="2" />
	</LinearLayout>
	
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp" >
        	<TextView
        	    android:layout_width="150dp"
        	    android:layout_height="wrap_content"
        	    android:textSize="14sp"
	            android:textColor="@color/preference_black"
	            android:text="@string/number_pad"
	            android:gravity="center"
	            android:layout_gravity="center" />
        	
        	<CheckBox
        	    android:id="@+id/NumPadCheckbox"
        	    android:layout_width="wrap_content"
        	    android:layout_height="30dp"
        	    android:button="@null"
        	    android:drawableRight="@drawable/check_default"
        	    android:paddingLeft="20dp"
        	    android:checked="true" />
	</LinearLayout>
	
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal" >
        	<TextView
        	    android:layout_width="150dp"
        	    android:layout_height="wrap_content"
        	    android:textSize="14sp"
	            android:textColor="@color/preference_black"
	            android:text="@string/bold_text"
	            android:gravity="center"
	            android:layout_gravity="center" />
        	
        	<CheckBox
        	    android:id="@+id/boldTextCheckbox"
        	    android:layout_width="wrap_content"
        	    android:layout_height="30dp"
        	    android:button="@null"
        	    android:drawableRight="@drawable/check_default"
        	    android:paddingLeft="20dp"
        	    android:checked="false" />
	</LinearLayout>
</LinearLayout>